# old_person_tracker

./: CMakeLists.txt  manifest.xml  playback_data.launch  record_data.launch  rviz_kinect_visualize.vcg  track_silhouettes.launch
MATLAB/: GetNumOfFiles.m  LoadData.m  LoadImage.m  PlotLabels.m  Segment.m  SegmentMain.m  SpatialCues.m  gentemplate.m  gentemplates.m
MATLAB/GCmex1.8/: GraphCut3dConstr.mexw64  GraphCutConstr.mexw64  GraphCutConstrSparse.mexw64  GraphCutMex.mexw64  gc_example.m
MATLAB/corrMatching/: corrMatching.m  license.txt
MATLAB/images/: capture_01_30_1.csv  capture_01_30_10.csv  capture_01_30_11.csv  capture_01_30_12.csv  capture_01_30_2.csv  capture_01_30_3.csv  capture_01_30_4.csv  capture_01_30_5.csv  capture_01_30_6.csv  capture_01_30_7.csv  capture_01_30_8.csv  capture_01_30_9.csv
launch/: playback_data.launch  track_silhouettes.launch
src/: CSVSaver.cpp  RateLimiter.cpp  SilhouetteTracker.cpp
